--- a/basic-apps-config.json
+++ b/basic-apps-config.json
@@ -31,6 +31,11 @@
       "params": []
     },
     {
+      "name": "dotnet3.5",
+      "version": null,
+      "params": []
+    },
+    {
       "name": "patch-my-pc",
       "version": null,
       "params": []
