feat(basic-apps): add patch-my-pc application
Adds a new application entry for "patch-my-pc" to the basic applications configuration list, with default null version and empty parameters array. This inclusion allows for the integration of the patch-my-pc tool into the system's basic apps setup.

--- a/basic-apps-config.json
+++ b/basic-apps-config.json
@@ -46,6 +46,11 @@
       "params": []
     },
     {
+      "name": "patch-my-pc",
+      "version": null,
+      "params": []
+    },
+    {
       "name": "unikey",
       "version": null,
       "params": []
