feat: add treesizefree to basic apps configuration
Add treesizefree app to the list of basic applications with default version and params. This expands the available tools in the config.

--- a/basic-apps-config.json
+++ b/basic-apps-config.json
@@ -46,6 +46,11 @@
       "params": []
     },
     {
+      "name": "treesizefree",
+      "version": null,
+      "params": []
+    },
+    {
       "name": "patch-my-pc",
       "version": null,
       "params": ["--ignore-checksums"]
