fix(config): update app name from java-runtime to ultraviwewer
Change the name of the application in basic-apps-config.json from "java-runtime" to "ultraviwewer" to align with the actual software used for remote viewing features.

--- a/basic-apps-config.json
+++ b/basic-apps-config.json
@@ -41,7 +41,7 @@
       "params": []
     },
     {
-      "name": "java-runtime",
+      "name": "ultraviwewer",
       "version": null,
       "params": []
     },
