feat: enhance app management script with interactive menus and improved detection
- Fix typo in basic-apps-config.json (ultraviwewer -> ultraviewer)
- Change parameter defaults to null for more explicit selection
- Update output formats from symbols to bracketed labels (e.g., [OK] ✓)
- Add interactive menus for action and config file selection
- Improve package detection with Chocolatey and Windows registry checks, including name mapping for common apps
- Enhance user experience for Chocolatey app management

--- a/basic-apps-config.json
+++ b/basic-apps-config.json
@@ -41,7 +41,7 @@
       "params": []
     },
     {
-      "name": "ultraviwewer",
+      "name": "ultraviewer",
       "version": null,
       "params": []
     },
