feat: Add --ignore-checksums param to patch-my-pc and winaero-tweaker
This updates the installation configuration for patch-my-pc and winaero-tweaker apps, adding the --ignore-checksums parameter to bypass checksum verification during setup. This ensures smoother installations on environments where checksums might mismatch.

--- a/basic-apps-config.json
+++ b/basic-apps-config.json
@@ -58,7 +58,7 @@
     {
       "name": "patch-my-pc",
       "version": null,
-      "params": []
+      "params": ["--ignore-checksums"]
     },
     {
       "name": "unikey",
@@ -88,7 +88,7 @@
     {
       "name": "winaero-tweaker",
       "version": null,
-      "params": []
+      "params": ["--ignore-checksums"]
     },
     {
       "name": "powertoys",
